# sscc-rag-paper

./: .env.example  .gitignore  DATA.md  README.md  data_manifest.json  pyproject.toml
data/hetdocqa/: DATASHEET.md  LICENSE  batch1_validated_questions.jsonl  batch2_validated_questions.jsonl  batch3_validated_questions.jsonl  batch4_validated_questions.jsonl  collections.json  corpus_manifest.json  hetdocqa.jsonl  questions.jsonl  review.json  review_batch2.json  review_batch3.json  review_batch4.json
data/hetdocqa-validation/: DATASHEET.md  collections.json  corpus_manifest.json  questions.jsonl
paper/: OUTLINE.md  analyze_reranker_robustness.py  extract_recall.py  extract_sscc.py  figstyle.py  main.aux  main.bbl  main.blg  main.out  main.tex  make_figures.py  references.bib
paper/figdata/: recall_hetdocqa.json  routing_musique.json  sscc.json
results/: hetdocqa_crossdoc_stratified.txt  hetdocqa_dev_ablation.txt  hetdocqa_dev_perquery.json  hetdocqa_dev_retonly.json  hetdocqa_facet_coverage.txt  hetdocqa_mahyde_control.txt  hetdocqa_modality_hyde.txt  hetdocqa_partial_NORAPTOR.txt  hetdocqa_test_ablation.txt  hetdocqa_test_perquery.json  hetdocqa_test_retonly.json  musique_ablation.txt  musique_dev_perquery.json  musique_dev_retonly.json  qasper_ablation.txt  qasper_dev_perquery.json  qasper_dev_retonly.json
review-app/: README.md  review.html
scripts/: build_hetdocqa.py  diag_crossdoc.py  diag_facet_coverage.py  diag_facet_sweep.py  diag_graph.py  diag_mahyde_control.py  diag_modality_fusion.py  diag_modality_hyde.py  diag_router.py  export_review.py  export_review_batch.py  fetch_data.py  hash_corpus.py  merge_hetdocqa.py  run_benchmark.py  run_hotpotqa_slice.py  run_retrieval_only.py  zenodo_new_version.py
src/sage/: __init__.py  cli.py
src/sage/cache/: __init__.py  keys.py  store.py
src/sage/chunking/: __init__.py  chunker.py  languages.py  raac.py
src/sage/clients/: __init__.py  base.py  embedder.py  factory.py  generator.py  reranker.py
src/sage/config/: __init__.py  loader.py  presets.py  schema.py  seed.py
src/sage/core/: __init__.py  errors.py  protocols.py  registry.py  types.py
src/sage/correction/: __init__.py  calibration.py  crag.py  sscc.py
src/sage/eval/: __init__.py  ablate.py  answer.py  benchmarks.py  dataset.py  metrics.py  runner.py  span_mapping.py  stats.py
src/sage/graph/: __init__.py  build.py  gnn.py  index.py  nli_edges.py  ppr.py  traversal.py
src/sage/hetdocqa/: __init__.py  build.py  curate.py  eval_loader.py  generate.py  release.py  review.py  schema.py  sources.py  spans.py
src/sage/parsing/: __init__.py  text.py
src/sage/pipeline/: __init__.py  assembly.py  expansion.py  indexing.py  rerank.py  retrieval.py
src/sage/prefetch/: __init__.py  buffer.py  metrics.py  srp.py
src/sage/raptor/: __init__.py  clustering.py  cross_doc.py  retrieval.py  summarize.py  tree.py
src/sage/routing/: __init__.py  calibration.py  compositional.py  egr.py  features.py  keyword.py  learned.py  oracle.py
src/sage/store/: __init__.py  lancedb_store.py
src/sage/strategies/: __init__.py  facet_coverage.py  fusion.py  hyde.py  modality_fusion.py  modality_hyde.py  semantic.py  step_back.py
src/sage/testing/: __init__.py  fakes.py
tests/: test_cache.py  test_chunking.py  test_config.py  test_eval.py  test_facet_coverage.py  test_fakes.py  test_graph.py  test_graph_pipeline.py  test_hetdocqa.py  test_indexing.py  test_modality_fusion.py  test_prefetch_raac_nli.py  test_query_pipeline.py  test_raptor.py  test_registry.py  test_review.py  test_routing_correction.py  test_seed.py  test_stats_ablate.py  test_store.py
